# rand-dec

./: CMakeLists.txt  README.md  app.icns  mainwindow.cpp  mainwindow.h
